service-mesh/bookinfo-ambient/httproute-reviews.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reviews
  namespace: bookinfo2
spec:
  parentRefs:
    - group: ''
      kind: Service
      name: reviews
      port: 9080
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: reviews-v2
          port: 9080
          weight: 1
      matches:
        - headers:
            - name: end-user
              type: Exact
              value: jason
          path:
            type: PathPrefix
            value: /
    - backendRefs:
        - group: ''
          kind: Service
          name: reviews-v1
          port: 9080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
